[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory-opt-env"
version = "1.0.0"
description = "A production-grade OpenEnv environment simulating real-world inventory management for training AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "nikhilgonugunta", email = ""}
]
keywords = ["openenv", "reinforcement-learning", "inventory-management", "supply-chain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "requests==2.32.2",
    "python-dotenv==1.0.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
inventory-opt = "server:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/nikhilgonugunta/inventory-opt"
Repository = "https://github.com/NIKHILGONUGUNTA-STACK/inventory-opt-env-"
Documentation = "https://huggingface.co/spaces/nikhilgonugunta/inventory-opt/blob/main/README.md"
