[project]
name = "smart-inventory-optimization"
version = "1.0.0"
description = "OpenEnv environment for inventory management RL agents"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.1",
    "openai>=2.7.2",
    "requests==2.32.2",
    "python-dotenv==1.0.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
